# OpenGL

./: .gitignore  CMakeLists.txt  README.md  RunCMake.bat  imgui.ini
HGraphics/: HGraphics.sln  README.txt
HGraphics/HGraphics/: HGraphics.vcxproj  HGraphics.vcxproj.filters  imgui.ini
HGraphics/HGraphics/include/: Camera.h  DeferredScene.h  LightManager.h  LineMesh.h  OBJManager.h  mesh.h  scene.h  shader.hpp  simpleScene.h
HGraphics/HGraphics/shader/: FSQShading.frag  FSQShading.vert  blinnShading.frag  blinnShading.vert  deferredShading.frag  deferredShading.vert  lightSphere.frag  lightSphere.vert  normalShader.frag  normalShader.vert  phongLighting.frag  phongLighting.vert  phongShading.frag  phongShading.vert
HGraphics/HGraphics/src/: DeferredScene.cpp  LightManager.cpp  LineMesh.cpp  OBJManager.cpp  main.cpp  mesh.cpp  scene.cpp  shader.cpp  simpleScene.cpp
HGraphics/includes/imgui/: imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.h  (+5 more)
assets/shader/: FSQShading.frag  blinnShading.frag  blinnShading.vert  finalPass.frag  finalPass.vert  geometry.frag  geometry.vert  light.frag  light.vert  lightSphere.frag  lightSphere.vert  normalShader.frag  phongLighting.frag  phongShading.frag  phongShading.vert  pointLightShadow.frag  pointLightShadow.vert  shadow.frag  shadow.vert  skybox.frag  skybox.vert  ssao.frag  ssao.vert
lib/: assimp-vc143-mtd.lib
src/: Camera.cpp  CrashHandler.cpp  DeferredScene.cpp  GBuffer.cpp  LineMesh.cpp  OBJManager.cpp  PointLightShadowMap.cpp  ShadowMap.cpp  glad.c  glew.c  main.cpp  mesh.cpp  scene.cpp  shader.cpp  simpleScene.cpp
src/include/: Camera.h  DeferredScene.h  GBuffer.h  LineMesh.h  OBJManager.h  PointLightShadowMap.h  ShadowMap.h  mesh.h  scene.h  shader.hpp  simpleScene.h
(+2 files in other folders)
